2005-07-03  Paolo Mantegazza  <mantegazza@aero.polimi.it>

	* base/include/rtai_schedcore.h: fixed wrong determination of the
	  cpu to which a readied soft task is pended.
	* base/sched/sched.immed: revised and improved managment 
	  of RTAI syscalls, following revision of the encoding of msgs 
	  read/writes.
	* base/sched/sys.c: put likely/unlikely suggestions here and there.
	* base/ipc/sem/sem.c: more consistent check in case of abnormal 
	  wakeup from rt_schedule, avoid using sem.
	* base/ipc/mbx/mbx.c: more consistent check in case of abnormal 
	  wakeup from rt_schedule, avoid using anything related to mbx.
	* base/ipc/msg/msg.c: consistent check in case of abnormal 
	  wakeup from rt_schedule, avoid using anything related to the
	  messaged task.

2005-07-01  Panagiotis Issaris <takis@gna.org>
	* configure.in: Fix the configure script when using an external Linux
	build directory.
	
2005-06-30  Paolo Mantegazza  <mantegazza@aero.polimi.it>

	* base/sched/sched.immed and api.c: implemnted new hashed registry
	  support.
	* /base/include/rtai_nam2num.h and rtai_registry.h: adapted to work 
	* /base/ipc/shm/shm.c: adapted to work with the new hashed registry 
	* /base/ipc/msg/msg.c: cancelled redundant dangerous dequeue_blocked.
	* /base/arch/i386/hal/hal.immed: adapted to likely changes of future
	  ADEOS patches.

2005-06-21  Paolo Mantegazza  <mantegazza@aero.polimi.it>

	* base/sched/sched.immed and sys.c: revised and improved managment 
	  of RTAI syscalls, following revision of the encoding of msgs 
	  read/writes.
	* base/ipc/netrpc/netrpc.c: exploits the semplification of the 
	  new encoding schedme for msgs read/writes.
	* base/include/rtai_schedcore.h: unifies an ubiquitus declaration
	  of RTAI syscalls arguments in a single place.
	* base/include/rtai_lxrt.h: simplified encoding of msgs read/writes.
	* base/include/rtai_netrpc.h: inheredits the encoding of rtai_lxrt.h,
	  with all the changes to functions declarations related to it.
